--- a/twiltter/Base.lproj/Main.storyboard
+++ b/twiltter/Base.lproj/Main.storyboard
@@ -22,24 +22,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="80I-gX-UT2">
-                                <rect key="frame" x="101" y="153" width="126" height="30"/>
+                                <rect key="frame" x="100" y="147" width="126" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Log in with Twitter"/>
                                 <connections>
                                     <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LDR-AI-s3U"/>
+                                    <segue destination="rnP-ZT-uyK" kind="presentation" identifier="loginSegue" id="rKK-tZ-IPe"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <connections>
-                        <segue destination="rnP-ZT-uyK" kind="presentation" identifier="loginSegue" id="FZC-HC-Owq"/>
-                    </connections>
+                    <navigationItem key="navigationItem" id="d7o-TS-KiO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1031.25" y="34.859154929577464"/>
         </scene>
-        <!--Tweets View Controller-->
+        <!--Tweets-->
         <scene sceneID="X6N-sK-amc">
             <objects>
                 <viewController storyboardIdentifier="TweetsViewController" id="rnP-ZT-uyK" customClass="TweetsViewController" customModule="twiltter" customModuleProvider="target" sceneMemberID="viewController">
@@ -51,21 +51,112 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RVW-L8-Lmu">
-                                <rect key="frame" x="136" y="154" width="48" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Logout"/>
-                                <connections>
-                                    <action selector="onLogout:" destination="rnP-ZT-uyK" eventType="touchUpInside" id="nxC-Sw-9Oq"/>
-                                </connections>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="115" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H8L-ug-Vor">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="wHa-jH-8gQ">
+                                    <rect key="frame" x="0.0" y="143" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="Logout"/>
+                                    <connections>
+                                        <action selector="onLogout:" destination="rnP-ZT-uyK" eventType="touchUpInside" id="BRl-1V-1ZI"/>
+                                    </connections>
+                                </button>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="115" id="c3L-lm-zY9" customClass="TweetCell" customModule="twiltter" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="115"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c3L-lm-zY9" id="BhY-Wm-T9y">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eUO-yB-ELg">
+                                                    <rect key="frame" x="8" y="8" width="69" height="69"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="69" id="3KH-mI-dbj"/>
+                                                        <constraint firstAttribute="height" constant="69" id="W37-x9-1eJ"/>
+                                                        <constraint firstAttribute="width" constant="69" id="x7U-P2-OLW"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wall Street Journal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jCe-A4-1OS">
+                                                    <rect key="frame" x="85" y="8" width="131" height="17"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="United CEO blamed 'system failure' in passenger removal incident" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Py1-ma-XSu">
+                                                    <rect key="frame" x="85" y="33" width="227" height="33.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOj-ds-mfL">
+                                                    <rect key="frame" x="296" y="8" width="16" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="@WallStreetJournal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iyh-o6-fuL">
+                                                    <rect key="frame" x="224" y="8" width="64" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OOj-ds-mfL" firstAttribute="leading" secondItem="Iyh-o6-fuL" secondAttribute="trailing" constant="8" id="4Cm-Od-2i0"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Py1-ma-XSu" secondAttribute="bottom" constant="12" id="IPv-FC-pYU"/>
+                                                <constraint firstItem="Iyh-o6-fuL" firstAttribute="top" secondItem="BhY-Wm-T9y" secondAttribute="top" constant="8" id="Igj-TF-Dqg"/>
+                                                <constraint firstItem="Iyh-o6-fuL" firstAttribute="leading" secondItem="jCe-A4-1OS" secondAttribute="trailing" constant="8" id="OYd-rp-5x3"/>
+                                                <constraint firstItem="Py1-ma-XSu" firstAttribute="top" secondItem="jCe-A4-1OS" secondAttribute="bottom" constant="8" id="UG7-AQ-Y7s"/>
+                                                <constraint firstItem="Py1-ma-XSu" firstAttribute="leading" secondItem="eUO-yB-ELg" secondAttribute="trailing" constant="8" id="cUf-mM-qiX"/>
+                                                <constraint firstAttribute="trailing" secondItem="Py1-ma-XSu" secondAttribute="trailing" constant="8" id="fiD-Jw-4uc"/>
+                                                <constraint firstAttribute="trailing" secondItem="OOj-ds-mfL" secondAttribute="trailing" constant="8" id="iXb-dq-Xxu"/>
+                                                <constraint firstItem="eUO-yB-ELg" firstAttribute="top" secondItem="BhY-Wm-T9y" secondAttribute="top" constant="8" id="jXZ-ib-9wj"/>
+                                                <constraint firstItem="eUO-yB-ELg" firstAttribute="leading" secondItem="BhY-Wm-T9y" secondAttribute="leading" constant="8" id="oQE-1Z-z1l"/>
+                                                <constraint firstItem="jCe-A4-1OS" firstAttribute="leading" secondItem="eUO-yB-ELg" secondAttribute="trailing" constant="8" id="s2x-PL-DR6"/>
+                                                <constraint firstItem="jCe-A4-1OS" firstAttribute="top" secondItem="BhY-Wm-T9y" secondAttribute="top" constant="8" id="smJ-f8-XWg"/>
+                                                <constraint firstItem="OOj-ds-mfL" firstAttribute="top" secondItem="jCe-A4-1OS" secondAttribute="top" id="tjh-8V-MH6"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="eUO-yB-ELg" secondAttribute="bottom" constant="12" id="voE-cm-Jgu"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="jCe-A4-1OS" id="29t-Hf-Bf5"/>
+                                            <outlet property="profileImageView" destination="eUO-yB-ELg" id="C9g-g9-SZC"/>
+                                            <outlet property="screennameLabel" destination="Iyh-o6-fuL" id="tRM-Bs-Hs4"/>
+                                            <outlet property="timeLabel" destination="OOj-ds-mfL" id="32n-7J-ULF"/>
+                                            <outlet property="tweetLabel" destination="Py1-ma-XSu" id="WVb-sI-z8i"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="H8L-ug-Vor" secondAttribute="trailing" id="DzC-xk-vlL"/>
+                            <constraint firstItem="H8L-ug-Vor" firstAttribute="leading" secondItem="Qxd-jV-bpc" secondAttribute="leading" id="aI6-hO-PCA"/>
+                            <constraint firstItem="H8L-ug-Vor" firstAttribute="top" secondItem="gE6-hl-8Bf" secondAttribute="bottom" id="ayR-D1-Bvd"/>
+                            <constraint firstItem="H4R-d6-Mzi" firstAttribute="top" secondItem="H8L-ug-Vor" secondAttribute="bottom" id="fgY-7e-dYb"/>
+                            <constraint firstAttribute="trailing" secondItem="H8L-ug-Vor" secondAttribute="trailing" id="tfX-Lw-zhD"/>
+                            <constraint firstItem="H8L-ug-Vor" firstAttribute="top" secondItem="gE6-hl-8Bf" secondAttribute="bottom" id="tfv-TH-dMj"/>
+                            <constraint firstItem="H4R-d6-Mzi" firstAttribute="top" secondItem="H8L-ug-Vor" secondAttribute="bottom" id="v1b-4K-jvL"/>
+                            <constraint firstItem="H8L-ug-Vor" firstAttribute="leading" secondItem="Qxd-jV-bpc" secondAttribute="leading" id="ygZ-MP-4Gp"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Tweets" id="g78-44-fL8">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="F5o-mi-OTP">
+                            <connections>
+                                <action selector="onLogout:" destination="rnP-ZT-uyK" id="sL0-Hm-4Hc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="H8L-ug-Vor" id="Gms-rb-XVp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bde-mj-CxR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="891" y="31"/>
+            <point key="canvasLocation" x="1805.625" y="35.91549295774648"/>
         </scene>
     </scenes>
 </document>
