--- a/twiltter/Base.lproj/Main.storyboard
+++ b/twiltter/Base.lproj/Main.storyboard
@@ -26,14 +26,16 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Log in with Twitter"/>
                                 <connections>
-                                    <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LDR-AI-s3U"/>
-                                    <segue destination="rnP-ZT-uyK" kind="presentation" identifier="loginSegue" id="rKK-tZ-IPe"/>
+                                    <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FPS-iZ-qv0"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="d7o-TS-KiO"/>
+                    <connections>
+                        <segue destination="pWW-b5-ZDR" kind="presentation" identifier="loginSegue" id="kHD-Iu-8y4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -52,7 +54,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="115" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H8L-ug-Vor">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="wHa-jH-8gQ">
                                     <rect key="frame" x="0.0" y="143" width="320" height="44"/>
@@ -133,12 +135,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="H8L-ug-Vor" firstAttribute="top" secondItem="gE6-hl-8Bf" secondAttribute="bottom" constant="-64" id="6Xq-UT-Uhh"/>
                             <constraint firstAttribute="trailing" secondItem="H8L-ug-Vor" secondAttribute="trailing" id="DzC-xk-vlL"/>
                             <constraint firstItem="H8L-ug-Vor" firstAttribute="leading" secondItem="Qxd-jV-bpc" secondAttribute="leading" id="aI6-hO-PCA"/>
-                            <constraint firstItem="H8L-ug-Vor" firstAttribute="top" secondItem="gE6-hl-8Bf" secondAttribute="bottom" id="ayR-D1-Bvd"/>
                             <constraint firstItem="H4R-d6-Mzi" firstAttribute="top" secondItem="H8L-ug-Vor" secondAttribute="bottom" id="fgY-7e-dYb"/>
                             <constraint firstAttribute="trailing" secondItem="H8L-ug-Vor" secondAttribute="trailing" id="tfX-Lw-zhD"/>
-                            <constraint firstItem="H8L-ug-Vor" firstAttribute="top" secondItem="gE6-hl-8Bf" secondAttribute="bottom" id="tfv-TH-dMj"/>
                             <constraint firstItem="H4R-d6-Mzi" firstAttribute="top" secondItem="H8L-ug-Vor" secondAttribute="bottom" id="v1b-4K-jvL"/>
                             <constraint firstItem="H8L-ug-Vor" firstAttribute="leading" secondItem="Qxd-jV-bpc" secondAttribute="leading" id="ygZ-MP-4Gp"/>
                         </constraints>
@@ -155,6 +156,24 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bde-mj-CxR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2803.125" y="35.91549295774648"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CsQ-Oh-xsM">
+            <objects>
+                <navigationController storyboardIdentifier="TweetsNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="pWW-b5-ZDR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g29-aI-tDT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rnP-ZT-uyK" kind="relationship" relationship="rootViewController" id="LYG-H3-D1l"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l3m-h7-k8O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1805.625" y="35.91549295774648"/>
         </scene>
